[gd_scene load_steps=4 format=3 uid="uid://batwmrph4qbyv"]

[ext_resource type="Script" path="res://hud/card.gd" id="1_yf580"]
[ext_resource type="Texture2D" uid="uid://c8g5mn7rab18h" path="res://textures/hud/hud_summon_card.png" id="2_pkncl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ba50"]
size = Vector2(158, 63)

[node name="Card" type="Area2D"]
script = ExtResource("1_yf580")
UNACTIVATED_COLOR = Color(0.306923, 0.306923, 0.306923, 1)
ACTIVATED_OFFSET = 20
HOVER_OFFSET = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(79, 31.5)
shape = SubResource("RectangleShape2D_7ba50")

[node name="CardSprite" type="Sprite2D" parent="."]
position = Vector2(87, 31)
scale = Vector2(1, 0.9)
texture = ExtResource("2_pkncl")

[node name="IconSprite" type="Sprite2D" parent="CardSprite"]
position = Vector2(-20, -2.98023e-07)
scale = Vector2(0.43, 0.43)

[node name="Label" type="Label" parent="CardSprite"]
offset_left = 33.0
offset_top = 6.66667
offset_right = 51.0
offset_bottom = 29.6667
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
